--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-The scope of this project is to create a Semantic Web Site using Node.js and JQuery.
+The scope of this project is to create a Semantic Web Site using Node.js.
